Metadata RW mdweb: various fix for ISO/FRA profile issues